[package]
name = "levenshtein_automata"
version = "0.2.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["text-processing"]
description = """Creates Levenshtein Automata in an efficient manner."""
documentation = "https://docs.rs/levenshtein-automata/"
homepage = "https://github.com/tantivy-search/levenshtein-automata"
repository = "https://github.com/tantivy-search/levenshtein-automata"
readme = "README.md"
keywords = ["levenshtein", "automaton", "automata", "fuzzy"]

[dependencies]
fst = {version="0.4", optional=true, default-features=false}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
levenshtein = "1.0"

[features]
fst_automaton = ["fst"]
